# ht-schema

./: README.md  pyproject.toml
fixtures/: ht_example_sip.yml  nd_example.yml  nd_multiwork.yml
schemas/: ht.json
validate/: validate.py
